Fixes alignment issues in UniForm

--- a/src/styles/unibase/forms/__forms.sass
+++ b/src/styles/unibase/forms/__forms.sass
@@ -24,4 +24,4 @@ uni-field
     margin-top: 0
 
 uni-button-input button
-    margin: 1rem 0
+    margin: 1.5rem 0 0
